# unilang

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/unilang-bridge/: Cargo.toml
crates/unilang-bridge/benches/: bridge_bench.rs
crates/unilang-bridge/src/: arrays.rs  cpython.rs  driver.rs  error.rs  jvm.rs  lib.rs  thread_pool.rs  types.rs
crates/unilang-cli/: Cargo.toml
crates/unilang-cli/src/: build.rs  formatter.rs  linter.rs  main.rs  native.rs  pack.rs  pkg.rs  project.rs  repl.rs  test_runner.rs
crates/unilang-codegen/: Cargo.toml
crates/unilang-codegen/src/: bytecode.rs  compiler.rs  lib.rs  tests.rs
crates/unilang-common/src/: error.rs  source.rs
crates/unilang-cpython/: Cargo.toml
crates/unilang-cpython/src/: lib.rs
crates/unilang-drivers/: Cargo.toml
crates/unilang-drivers/src/: elasticsearch.rs  influxdb.rs  kafka.rs  lib.rs  memcached.rs  mongodb.rs  mysql.rs  nats.rs  postgres.rs  prometheus_driver.rs  rabbitmq.rs  redis.rs  s3.rs  smtp.rs  sqlite.rs  websocket.rs
crates/unilang-e2e-tests/: Cargo.toml
crates/unilang-e2e-tests/tests/: pipeline_tests.rs
crates/unilang-jupyter/: Cargo.toml  install.sh
crates/unilang-jupyter/kernel/: kernel.json
crates/unilang-jupyter/src/: main.rs
crates/unilang-jvm/: Cargo.toml
crates/unilang-jvm/src/: constant_pool.rs  emitter.rs  lib.rs  opcodes.rs
crates/unilang-lexer/src/: indent.rs  keywords.rs  lib.rs  token.rs
crates/unilang-lsp/: Cargo.toml
crates/unilang-lsp/src/: backend.rs  completion.rs  definition.rs  diagnostics.rs  formatting.rs  hover.rs  main.rs
crates/unilang-native/: Cargo.toml
crates/unilang-native/src/: lib.rs
crates/unilang-parser/src/: ast.rs  expr.rs  lib.rs  parser.rs  stmt.rs  tests.rs  types.rs
crates/unilang-pkg/: Cargo.toml
crates/unilang-pkg/src/: lib.rs  registry.rs  resolver.rs
crates/unilang-runtime/src/: error.rs  lib.rs  limits.rs  tests.rs  vm.rs
crates/unilang-semantic/: Cargo.toml
crates/unilang-semantic/src/: analyzer.rs  checker.rs  lib.rs  scope.rs  types.rs
crates/unilang-stdlib/: Cargo.toml
crates/unilang-stdlib/src/: base64_mod.rs  builtins.rs  crypto.rs  csv_mod.rs  datetime.rs  json.rs  lib.rs  math.rs  regex_mod.rs  strings.rs  tests.rs  uuid_mod.rs
docs/announcement/: LAUNCH_POST.md
docs/architecture/: COMPILER_PIPELINE.md
docs/governance/: INCUBATION_PROPOSAL.md  RELEASE_PROCESS.md
docs/guides/: API_REFERENCE.md  COOKBOOK.md  IDE_SETUP.md  INSTALLATION.md  MIGRATION_JAVA.md  MIGRATION_PYTHON.md
docs/planning/: ROADMAP.md
docs/security/: SECURITY_MODEL.md
examples/data-pipeline/: README.md  pipeline.uniL
examples/library-mgmt/backend/api/: server.uniL
examples/library-mgmt/backend/services/: library_service.uniL
examples/web-service/: README.md  server.uniL
tests/programs/: class_example.uniL  dict_operations.uniL  error_handling.uniL  fibonacci.uniL  for_loop.uniL  higher_order.uniL  list_operations.uniL
tools/distribution/: build-all.sh
tools/eclipse-plugin/: README.md  plugin.xml
tools/eclipse-plugin/src/org/unilang/eclipse/: Activator.java
tools/eclipse-plugin/src/org/unilang/eclipse/completion/: UniLangCompletionProcessor.java
tools/eclipse-plugin/src/org/unilang/eclipse/editor/: SingleTokenScanner.java  UniLangDocumentProvider.java  UniLangEditor.java  UniLangSourceViewerConfiguration.java
tools/eclipse-plugin/src/org/unilang/eclipse/syntax/: UniLangCodeScanner.java  UniLangColorManager.java  UniLangPartitionScanner.java
tools/jetbrains-plugin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
tools/jetbrains-plugin/src/main/java/org/unilang/intellij/: UniLangFileType.java  UniLangIcons.java  UniLangLanguage.java
tools/jetbrains-plugin/src/main/java/org/unilang/intellij/annotator/: UniLangAnnotator.java
tools/jetbrains-plugin/src/main/java/org/unilang/intellij/completion/: UniLangCompletionContributor.java
tools/jetbrains-plugin/src/main/java/org/unilang/intellij/parser/: UniLangParserDefinition.java  UniLangPsiFile.java
tools/jetbrains-plugin/src/main/java/org/unilang/intellij/syntax/: UniLangLexer.java  UniLangSyntaxHighlighter.java  UniLangSyntaxHighlighterFactory.java  UniLangTokenTypes.java
tools/unilang-ide/: README.md  electron-builder.yml  package.json
tools/unilang-ide/scripts/: after-pack.cjs
tools/unilang-ide/src/main/: main.js  preload.js  settings-store.js
tools/unilang-ide/src/renderer/: app.js
tools/vscode-extension/: README.md  package.json
tools/vscode-extension/snippets/: unilang.snippets.json
