# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.

[package]
name = "unilang-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "JVM/CPython bridge for UniLang — type marshaling and cross-VM interop (v2.0)"

[dependencies]
unilang-runtime = { path = "../unilang-runtime" }
jni  = { version = "0.21", default-features = false, optional = true }
pyo3 = { version = "0.22", features = ["auto-initialize"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bridge_bench"
harness = false

[features]
default = []
jvm     = ["dep:jni"]
cpython = ["dep:pyo3"]
