[package]
name = "unilang-native"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UniLang native AOT compilation — embed bytecode into standalone executables"

[dependencies]
unilang-parser = { path = "../unilang-parser" }
unilang-semantic = { path = "../unilang-semantic" }
unilang-codegen = { path = "../unilang-codegen" }
unilang-common = { path = "../unilang-common" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
