[package]
name = "unilang-pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UniLang package manager — publish and install packages from unilang.dev"

[dependencies]
unilang-common = { path = "../unilang-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
sha2 = "0.10"
hex = "0.4"
zip = "2"
